--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,7 @@ services:
   server:
     build: ./
     environment:
-      - DBHOST
-      - DBNAME
-      - DBUSER
-      - DBPASS
+      - LOYALTY_API
       - APIKEY
       - PORT
       - LOGLEVEL
