--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "dependencies": {
       "express": "^4.18.1",
       "body-parser": "^1.20.0",
+      "axios": "^0.27.2",
+      "currency.js": "^2.0.4",
       "winston": "^3.7.2"
     }
 }
